--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   meta: ^1.3.0
   very_good_analysis: ^2.4.0
   stream_transform: ^2.0.0
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   bloc_test: ^9.0.0
